--- a/app/src/main/res/layout/activity_symptom.xml
+++ b/app/src/main/res/layout/activity_symptom.xml
@@ -23,170 +23,29 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ScrollView
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:id="@+id/user_item"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@id/btn_save"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Head">
+        app:layout_constraintTop_toBottomOf="@+id/Head"
+        app:layout_constraintBottom_toTopOf="@id/btn_save">
 
-        <LinearLayout
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_symptom"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="match_parent"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/listitem_symptom"
+            />
+    </LinearLayout>
 
-            <TextView
-                android:id="@+id/text_headache"
-                android:layout_width="match_parent"
-                android:layout_height="135dp"
-                android:text="headache"
-                android:textSize="36sp"
-                android:textStyle="bold"
-                android:gravity="center"
-                android:textColor="@color/primary_light"
-                android:background="@drawable/style_symptom_content"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-            <TextView
-                android:id="@+id/text_breast_pain"
-                android:layout_width="match_parent"
-                android:layout_height="135dp"
-                android:text="breast pain"
-                android:textStyle="bold"
-                android:textSize="36sp"
-                android:gravity="center"
-                android:textColor="@color/primary_light"
-                android:background="@drawable/style_symptom_content"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-            <TextView
-                android:id="@+id/text_depressed"
-                android:layout_width="match_parent"
-                android:layout_height="135dp"
-                android:text="depressed"
-                android:textStyle="bold"
-                android:textSize="36sp"
-                android:gravity="center"
-                android:textColor="@color/primary_light"
-                android:background="@drawable/style_symptom_content"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-            <TextView
-                android:id="@+id/text_fatigue"
-                android:layout_width="match_parent"
-                android:layout_height="135dp"
-                android:text="fatigue"
-                android:textStyle="bold"
-                android:textSize="36sp"
-                android:gravity="center"
-                android:textColor="@color/primary_light"
-                android:background="@drawable/style_symptom_content"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-            <TextView
-                android:id="@+id/text_anxious"
-                android:layout_width="match_parent"
-                android:layout_height="135dp"
-                android:text="anxious"
-                android:textSize="36sp"
-                android:textStyle="bold"
-                android:gravity="center"
-                android:textColor="@color/primary_light"
-                android:background="@drawable/style_symptom_content"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-            <TextView
-                android:id="@+id/text_swollen_breast"
-                android:layout_width="match_parent"
-                android:layout_height="135dp"
-                android:text="swollen breasts"
-                android:textStyle="bold"
-                android:textSize="36sp"
-                android:gravity="center"
-                android:textColor="@color/primary_light"
-                android:background="@drawable/style_symptom_content"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-            <TextView
-                android:id="@+id/text_appetite_change"
-                android:layout_width="match_parent"
-                android:layout_height="135dp"
-                android:text="appetite changes"
-                android:textStyle="bold"
-                android:textSize="36sp"
-                android:gravity="center"
-                android:textColor="@color/primary_light"
-                android:background="@drawable/style_symptom_content"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-            <TextView
-                android:id="@+id/text_constipation"
-                android:layout_width="match_parent"
-                android:layout_height="135dp"
-                android:text="constipation"
-                android:textStyle="bold"
-                android:textSize="36sp"
-                android:gravity="center"
-                android:textColor="@color/primary_light"
-                android:background="@drawable/style_symptom_content"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-            <TextView
-                android:id="@+id/text_diarrhea"
-                android:layout_width="match_parent"
-                android:layout_height="135dp"
-                android:text="diarrhea"
-                android:textStyle="bold"
-                android:textSize="36sp"
-                android:gravity="center"
-                android:textColor="@color/primary_light"
-                android:background="@drawable/style_symptom_content"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-            <TextView
-                android:id="@+id/text_dema"
-                android:layout_width="match_parent"
-                android:layout_height="135dp"
-                android:text="dema"
-                android:textStyle="bold"
-                android:textSize="36sp"
-                android:gravity="center"
-                android:textColor="@color/primary_light"
-                android:background="@drawable/style_symptom_content"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-            <TextView
-                android:id="@+id/text_back_pain"
-                android:layout_width="match_parent"
-                android:layout_height="135dp"
-                android:text="back pain"
-                android:textStyle="bold"
-                android:textSize="36sp"
-                android:gravity="center"
-                android:textColor="@color/primary_light"
-                android:background="@drawable/style_symptom_content"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-        </LinearLayout>
-    </ScrollView>
 
     <Button
         android:id="@+id/btn_save"
         android:layout_width="match_parent"
-        android:layout_height="84dp"
+        android:layout_height="100dp"
         android:text="save"
         android:textColor="@color/primary_dark"
         android:textSize="48sp"
@@ -198,4 +57,6 @@
         android:gravity="center"
         android:textAllCaps="false">
     </Button>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
