--- a/app/src/main/res/layout/fragment_recent_peroid_start.xml
+++ b/app/src/main/res/layout/fragment_recent_peroid_start.xml
@@ -48,7 +48,7 @@
         android:layout_marginTop="57dp"
         android:background="@drawable/style_enter_period_date_line"
         android:gravity="center"
-        android:inputType="date"
+        android:inputType="number"
         android:padding="10dp"
         android:textColor="@color/primary_light"
         android:textSize="36dp"
@@ -79,7 +79,7 @@
         android:layout_marginTop="57dp"
         android:background="@drawable/style_enter_period_date_line"
         android:gravity="center"
-        android:inputType="date"
+        android:inputType="number"
         android:padding="10dp"
         android:textColor="@color/primary_light"
         android:textSize="36dp"
