--- a/app/src/main/res/layout/fragment_recent_peroid_end.xml
+++ b/app/src/main/res/layout/fragment_recent_peroid_end.xml
@@ -77,7 +77,7 @@
         android:layout_marginStart="69dp"
         android:layout_marginTop="57dp"
         android:textSize="36dp"
-        android:inputType="date"
+        android:inputType="number"
         android:maxLength="2"
         android:textColor="@color/primary_light"
         android:gravity="center"
