--- a/app/src/main/res/layout/fragment_free_home.xml
+++ b/app/src/main/res/layout/fragment_free_home.xml
@@ -128,6 +128,18 @@
                 android:textSize="36dp"
                 android:textStyle="bold"></Button>
 
+            <Button
+                android:id="@+id/btn_setting"
+                android:layout_width="288dp"
+                android:layout_height="128dp"
+                android:layout_marginTop="30dp"
+                android:background="@drawable/style_unclicked_period_border"
+                android:text="Setting"
+                android:textAllCaps="false"
+                android:textColor="@color/primary_light"
+                android:textSize="36dp"
+                android:textStyle="bold"></Button>
+
 
         </LinearLayout>
 
