--- a/app/src/main/res/layout/activity_free_setting.xml
+++ b/app/src/main/res/layout/activity_free_setting.xml
@@ -49,7 +49,7 @@
 
             <Button
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
+                android:layout_height="150dp"
                 android:background="@drawable/style_free_setting_content"
                 android:gravity="center"
                 android:text="Edit nickname"
@@ -60,7 +60,7 @@
 
             <Button
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
+                android:layout_height="150dp"
                 android:background="@drawable/style_free_setting_content"
                 android:gravity="center"
                 android:text="Record of my period"
@@ -71,7 +71,7 @@
 
             <Button
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
+                android:layout_height="150dp"
                 android:background="@drawable/style_free_setting_content"
                 android:gravity="center"
                 android:text="Sanitary pad time"
@@ -83,7 +83,7 @@
             <androidx.appcompat.widget.SwitchCompat
                 android:id="@+id/switch1"
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
+                android:layout_height="150dp"
                 android:background="@drawable/style_free_setting_content"
                 android:gravity="center"
                 android:text="Notification"
@@ -94,20 +94,33 @@
             <androidx.appcompat.widget.SwitchCompat
                 android:id="@+id/switch2"
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
+                android:layout_height="150dp"
                 android:background="@drawable/style_free_setting_content"
                 android:gravity="center"
                 android:text="Pregnancy"
                 android:textColor="@color/primary_light"
                 android:textSize="35sp"
                 android:textStyle="bold" />
+
             <Button
                 android:id="@+id/btn_free_to_pre"
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
+                android:layout_height="150dp"
                 android:background="@drawable/style_free_setting_content"
                 android:gravity="center"
                 android:text="Go To Pre"
+                android:textColor="@color/primary_light"
+                android:textSize="35sp"
+                android:textStyle="bold"
+                android:textAllCaps="false"/>
+
+            <Button
+                android:id="@+id/btn_delete_acount"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:background="@drawable/style_free_setting_content"
+                android:gravity="center"
+                android:text="Delete my acount"
                 android:textColor="@color/primary_light"
                 android:textSize="35sp"
                 android:textStyle="bold"
