--- a/app/src/main/res/layout/activity_free_alarm.xml
+++ b/app/src/main/res/layout/activity_free_alarm.xml
@@ -26,13 +26,14 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/Head"
-            app:layout_constraintBottom_toTopOf="@id/button">
+            app:layout_constraintBottom_toTopOf="@id/btn_add">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
                 <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recy_alarm"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     tools:listitem="@layout/listitem_alarm"
@@ -42,7 +43,7 @@
         </ScrollView>
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btn_add"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="11dp"
