--- a/app/src/main/res/layout/fragment_free_home.xml
+++ b/app/src/main/res/layout/fragment_free_home.xml
@@ -24,6 +24,7 @@
             android:gravity="center"
             android:orientation="vertical">
 
+            <!--
             <TextView
                 android:id="@+id/txt_days_left"
                 android:layout_width="wrap_content"
@@ -45,7 +46,7 @@
                 android:text="Edit My Period"
                 android:textAllCaps="false"
                 android:textSize="32dp"
-                android:textStyle="bold"></Button>
+                android:textStyle="bold"></Button>-->
         </LinearLayout>
     </FrameLayout>
 
