--- a/app/src/main/res/layout/activity_free_alarm.xml
+++ b/app/src/main/res/layout/activity_free_alarm.xml
@@ -51,6 +51,7 @@
         android:text="+"
         android:textColor="@color/primary_light"
         android:textSize="60sp"
+        android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
