--- a/app/src/main/res/layout/activity_free_setting.xml
+++ b/app/src/main/res/layout/activity_free_setting.xml
@@ -84,7 +84,7 @@
                 android:textAllCaps="false"/>
 
             <androidx.appcompat.widget.SwitchCompat
-                android:id="@+id/switch1"
+                android:id="@+id/switch_notification"
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
                 android:background="@drawable/style_free_setting_content"
@@ -95,7 +95,7 @@
                 android:textStyle="bold" />
 
             <androidx.appcompat.widget.SwitchCompat
-                android:id="@+id/switch2"
+                android:id="@+id/switch_pregnancy"
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
                 android:background="@drawable/style_free_setting_content"
