--- a/app/src/main/res/layout/fragment_free_home_enter_date.xml
+++ b/app/src/main/res/layout/fragment_free_home_enter_date.xml
@@ -25,7 +25,7 @@
             android:gravity="center"></TextView>
 
         <Button
-            android:id="@+id/edit_period_button"
+            android:id="@+id/btn_edit_period"
             android:layout_width="288dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
