--- a/app/src/main/res/layout/fragment_edit_period_end.xml
+++ b/app/src/main/res/layout/fragment_edit_period_end.xml
@@ -30,7 +30,7 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="119dp"
         android:layout_marginStart="10dp"
-        android:text="/year(e)"
+        android:text="/year"
         android:textStyle="bold"
         android:textColor="@color/primary_light"
         android:textSize="38dp"
@@ -60,7 +60,7 @@
         app:layout_constraintTop_toBottomOf="@id/text_year"
         android:layout_marginTop="57dp"
         android:layout_marginStart="10dp"
-        android:text="/month(e)"
+        android:text="/month"
         android:textStyle="bold"
         android:textColor="@color/primary_light"
         android:textSize="38dp"
@@ -90,7 +90,7 @@
         app:layout_constraintTop_toBottomOf="@id/text_month"
         android:layout_marginTop="57dp"
         android:layout_marginStart="10dp"
-        android:text="/th(e)"
+        android:text="/th"
         android:textStyle="bold"
         android:textColor="@color/primary_light"
         android:textSize="38dp"
