--- a/app/src/main/res/layout/listitem_symptom.xml
+++ b/app/src/main/res/layout/listitem_symptom.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <TextView
+    <CheckBox
         android:id="@+id/text_symptom"
         android:layout_width="match_parent"
         android:layout_height="150dp"
@@ -16,7 +16,8 @@
         android:background="@drawable/style_symptom_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:cursorVisible="false"/>
 
 
 
